--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -38,6 +38,11 @@
 				<h4>Comment:</h4>
 				<p>{{ item.comment }}</p>
 			</div>
+			
+			<div class="permalink">
+				<h4>Permalink:</h4>
+				<a href="{{ item.permalink }}">{{ item.permalink }}</a>
+			</div>
 			{% endfor %}
 	  	{% endfor %}
 	  
