Adds link to source code.

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
     <p> Sybil performs keyword sentiment analysis on Reddit posts, utilizing a list of keywords compiled by the Department of Homeland Security. </p>
 
     <div class="links">
+      <a href="https://github.com/elainechan/sybil">Source </a>
       <a href="https://gist.github.com/jm3/2815378"> Full list of keywords </a>
       <a href="http://text-processing.com/docs/sentiment.html">NLTK Sentiment Analysis API</a>
     </div>
