Moves source link to top nav.

--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -10,6 +10,7 @@
     <div class="topnav">
         <a class="active" href="/">Home</a>
 		<a href="about">About</a>
+    <a href="https://github.com/elainechan/sybil">Source</a>
 		<a href="cybersecurity">Search Cybersecurity Keywords</a>
 		<a href="terrorism">Search Terrorism Keywords</a>
     </div>
