--- a/templates/terrorism.html
+++ b/templates/terrorism.html
@@ -9,7 +9,8 @@
   <body>
     <div class="topnav">
         <a class="active" href="/">Home</a>
-		<a href="about">About</a>
+		<a href="about">About</a>      
+		<a href="https://github.com/elainechan/sybil">Source</a>
 		<a href="cybersecurity">Search Cybersecurity Keywords</a>
 		<a href="terrorism">Search Terrorism Keywords</a>
     </div>
@@ -17,7 +18,7 @@
     <p> Sybil performs keyword sentiment analysis on Reddit posts, utilizing a list of keywords compiled by the Department of Homeland Security. </p>
 
     <div class="links">
-	  <a href="https://gist.github.com/jm3/2815378"> Full list of keywords </a>
+	  	<a href="https://gist.github.com/jm3/2815378"> Full list of keywords </a>
       <a href="http://text-processing.com/docs/sentiment.html">NLTK Sentiment Analysis API</a>	  
     </div>
     <div class="results">
